learning/istio/fluentd.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluentd
  namespace: obs
  labels:
    k8s-app: fluentd-logging
    version: v1
spec:
  selector:
    matchLabels:
      k8s-app: fluentd-logging
      version: v1
  template:
    metadata:
      labels:
        k8s-app: fluentd-logging
        version: v1
    spec:
      serviceAccount: fluentd
      serviceAccountName: fluentd
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          effect: NoSchedule
        - key: node-role.kubernetes.io/master
          effect: NoSchedule
      containers:
        - name: fluentd
          image: fluent/fluentd-kubernetes-daemonset:v1-debian-elasticsearch
          volumeMounts:
            - name: fluentd-config
              mountPath: /fluentd/etc/
            # - name: varlog
            #   mountPath: /var/log
            # When actual pod logs in /var/lib/docker/containers, the following lines should be used.
            # - name: dockercontainerlogdirectory
            #   mountPath: /var/lib/docker/containers
            #   readOnly: true
            # When actual pod logs in /var/log/pods, the following lines should be used.
            - name: dockercontainerlogdirectory
              mountPath: /var/log/pods
              readOnly: true
      terminationGracePeriodSeconds: 30
      volumes:
        - name: fluentd-config
          configMap:
            name: fluentd-config
        # - name: varlog
        #   hostPath:
        #     path: /var/log
        # When actual pod logs in /var/lib/docker/containers, the following lines should be used.
        # - name: dockercontainerlogdirectory
        #   hostPath:
        #     path: /var/lib/docker/containers
        # When actual pod logs in /var/log/pods, the following lines should be used.
        - name: dockercontainerlogdirectory
          hostPath:
            path: /var/log/pods
