learning/istio/jaeger.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
        sidecar.istio.io/inject: "false"
    spec:
      containers:
        - name: jaeger
          image: jaegertracing/all-in-one:1.45
          ports:
            - containerPort: 16686
            - containerPort: 9411
          args:
            - "--collector.zipkin.host-port=9411"

---
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  namespace: default
spec:
  selector:
    app: jaeger
  ports:
    - name: ui
      port: 16686
      targetPort: 16686
    - name: zipkin
      port: 9411
      targetPort: 9411
  type: ClusterIP
