learning/istio/prom.yaml
---
# Source: prometheus/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/instance: prometheus
    app.kubernetes.io/version: v3.5.0
    helm.sh/chart: prometheus-27.37.0
    app.kubernetes.io/part-of: prometheus
  name: prometheus
  namespace: default
spec:
  ports:
    - name: http
      port: 9090
      protocol: TCP
      targetPort: 9090
  selector:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/instance: prometheus
  sessionAffinity: None
  type: "ClusterIP"
---
# Source: prometheus/templates/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/instance: prometheus
    app.kubernetes.io/version: v3.5.0
    helm.sh/chart: prometheus-27.37.0
    app.kubernetes.io/part-of: prometheus
  name: prometheus
  namespace: default
spec:
  strategy:
    type: Recreate
    rollingUpdate: null
  selector:
    matchLabels:
      app.kubernetes.io/component: server
      app.kubernetes.io/name: prometheus
      app.kubernetes.io/instance: prometheus
  replicas: 1
  revisionHistoryLimit: 10
  template:
    metadata:
      labels:
        app.kubernetes.io/component: server
        app.kubernetes.io/name: prometheus
        app.kubernetes.io/instance: prometheus
        app.kubernetes.io/version: v3.5.0
        helm.sh/chart: prometheus-27.37.0
        app.kubernetes.io/part-of: prometheus
        
        sidecar.istio.io/inject: "false"
    spec:
      enableServiceLinks: true
      serviceAccountName: prometheus
      containers:
        # - name: prometheus-server-configmap-reload
        #   image: "ghcr.io/prometheus-operator/prometheus-config-reloader:v0.85.0"
        #   imagePullPolicy: "IfNotPresent"
        #   args:
        #     - --watched-dir=/etc/config
        #     - --listen-address=0.0.0.0:8080
        #     - --reload-url=http://127.0.0.1:9090/-/reload
        #   ports:
        #     - containerPort: 8080
        #       name: metrics
        #   livenessProbe:
        #     httpGet:
        #       path: /healthz
        #       port: metrics
        #       scheme: HTTP
        #     initialDelaySeconds: 2
        #     periodSeconds: 10
        #   readinessProbe:
        #     httpGet:
        #       path: /healthz
        #       port: metrics
        #       scheme: HTTP
        #     periodSeconds: 10
        #   volumeMounts:
        #     - name: config-volume
        #       mountPath: /etc/config
        #       readOnly: true

        - name: prometheus-server
          image: "docker.io/prom/prometheus:v3.5.0"
          imagePullPolicy: "IfNotPresent"
          args:
            - --storage.tsdb.retention.time=15d
            - --config.file=/etc/config/prometheus.yml
            - --storage.tsdb.path=/data
            - --web.console.libraries=/etc/prometheus/console_libraries
            - --web.console.templates=/etc/prometheus/consoles
            - --web.enable-lifecycle
          ports:
            - containerPort: 9090
          readinessProbe:
            httpGet:
              path: /-/ready
              port: 9090
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 5
            timeoutSeconds: 4
            failureThreshold: 3
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: /-/healthy
              port: 9090
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 3
            successThreshold: 1
          volumeMounts:
            - name: config-volume
              mountPath: /etc/config
            - name: storage-volume
              mountPath: /data
              subPath: ""
      dnsPolicy: ClusterFirst
      terminationGracePeriodSeconds: 300
      volumes:
        - name: config-volume
          configMap:
            name: prometheus
        - name: storage-volume
          emptyDir:
            {}
