learning/istio/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: app-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"


---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: url-shortener-vs
spec:
  hosts:
  - "*"
  gateways:
  - url-shortener-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: jaeger
        port:
          number: 16686
          
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: url-shortener
        port:
          number: 10000

  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: prometheus
        port:
          number: 10000
